@@ -1,5 +1,5 @@
 /*
- * $Id: h_windows.prg,v 1.59 2006-02-11 06:19:33 guerra000 Exp $
+ * $Id: h_windows.prg,v 1.60 2006-02-12 17:46:00 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -127,6 +127,8 @@ int _OOHG_ShowContextMenus = 1;      //
 int _OOHG_GlobalRTL = 0;             // Force RTL functionality
 int _OOHG_NestedSameEvent = 0;       // Allows to nest an event currently performed (i.e. CLICK button)
 PHB_ITEM _OOHG_LastSelf = NULL;
+
+extern HB_EXPORT PHB_SYMB    hb_dynsymSymbol( PHB_DYNS pDynSym );
 
 #pragma ENDDUMP
 
