@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.97 2006-02-12 01:49:17 declan2005 Exp $
+ * $Id: ChangeLog,v 1.98 2006-02-12 17:45:59 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-02-12 00:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_controlmisc.c
+  * source/c_windows.c
+  * source/h_windows.prg
+    * Added hb_dynsymSymbol() declaration inside own source code.
 
 2006-02-11 20:45 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
   * source/miniprint.prg
